# plane-tracker-rgb-pi

./: CHANGELOG.md  README.md  pyproject.toml
its_a_plane/: its_a_plane.py
its_a_plane/display/: __init__.py
its_a_plane/scenes/: clock.py  date.py  daysforecast.py  flightdetails.py  flightlogo.py  journey.py  loadingpulse.py  planedetails.py  temperature.py
its_a_plane/setup/: email_alerts.py
its_a_plane/utilities/: overhead.py  temperature.py
its_a_plane/web/: map_generator.py
